--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/contact-page/rof-contact-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/contact-page/rof-contact-page.component.html
@@ -13,6 +13,6 @@
 
   <div class="rof-button-container">
     <button class="rof-button" mat-flat-button (click)="reportOfFire.consentToCall = false; previous();">Previous</button>
-	  <button class="rof-button" mat-flat-button color="primary" (click)="reportOfFire.consentToCall = true; next();">Continue</button>
+	  <button class="rof-button-primary" mat-flat-button (click)="reportOfFire.consentToCall = true; next();">Continue</button>
   </div>
 </div>
