--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/review-page/rof-review-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/review-page/rof-review-page.component.html
@@ -3,6 +3,6 @@
   {{ parseJson() }}
 
   <div>
-	  <button mat-flat-button color="primary" (click)="next()">Submit</button>
+	  <button mat-flat-button class="rof-button-primary" (click)="next()">Submit</button>
   </div>
 </div>
