--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/title-page/rof-title-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/title-page/rof-title-page.component.html
@@ -4,9 +4,9 @@
   <div class="rof-text-secondary-header">{{ message }}</div>
   <div *ngIf="!closeButton" class="rof-button-container">
     <button mat-flat-button class="rof-button" (click)="openCallPage()">Call</button>
-	  <button mat-flat-button class="rof-button" color="primary" (click)="next()">Start</button>
+	  <button mat-flat-button class="rof-button-primary" (click)="next()">Start</button>
   </div>
   <div *ngIf="closeButton" class="rof-button-container">
-    <button mat-flat-button class="rof-button" (click)="close()">Close</button>
+    <button mat-flat-button class="rof-button-primary" (click)="close()">Close</button>
   </div>
 </div>
