--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/complex-question-page/rof-complex-question-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/complex-question-page/rof-complex-question-page.component.html
@@ -13,6 +13,6 @@
 
   <div class="rof-button-container">
     <button class="rof-button" mat-flat-button (click)="previous()">Previous</button>
-	  <button class="rof-button" [disabled]="disableNext" mat-flat-button color="primary" (click)="next()">Next<mat-icon>arrow_forward</mat-icon></button>
+	  <button [class]="'rof-button' + (disableNext ? '-disabled' : '-primary')" [disabled]="disableNext" mat-flat-button color="primary" (click)="next()">Next<mat-icon class="left-padding">arrow_forward</mat-icon></button>
   </div>
 </div>
