--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/photo-page/rof-photo-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/photo-page/rof-photo-page.component.html
@@ -3,6 +3,6 @@
   <div class="rof-text-secondary-header">{{ message }}</div>
   <div class="rof-button-container">
     <button class="rof-button" mat-flat-button (click)="previous()">Previous</button>
-	  <button class="rof-button" mat-flat-button color="primary" (click)="next()">Continue</button>
+	  <button class="rof-button-primary" mat-flat-button (click)="next()">Continue</button>
   </div>
 </div>
