--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="mobile-header">
-    <span><span *ngIf="allowExit" (click)="exit()">Exit</span></span>
+    <span><span *ngIf="allowExit" (click)="exit()"><mat-icon style="position: absolute; left: 0px;">chevron_left</mat-icon>Exit</span></span>
     <span>Report A Fire</span>
     <span><span *ngIf="allowSkip" (click)="skip()">Skip</span></span>
   </div>
