Add phone number mask for contact page

--- a/client/wfnews-war/src/main/angular/src/app/app.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.scss
@@ -240,6 +240,15 @@
     display: flex !important;
     margin-left: auto;
   }
+  ::ng-deep .wfnews-application {
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: white;
+}
 }
 
 @media print {
