--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.html
@@ -1,4 +1,4 @@
-<div>
+<div style="max-width: 786px;">
   <div class="mobile-header">
     <span><span *ngIf="allowExit" (click)="exit()"><mat-icon style="position: absolute; left: 0px;">chevron_left</mat-icon>Exit</span></span>
     <span>Report A Fire</span>
