--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/contact-page/rof-contact-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/contact-page/rof-contact-page.component.scss
@@ -1,1 +1,16 @@
 @import '../report-of-fire.component.scss';
+
+.input-style {
+  margin: 10px 20px;
+  width: calc(100vw - 40px);
+}
+
+.mat-form-field-appearance-outline {
+  background-color: #f1f1f1;
+  height: 60px;
+  border-radius: 7px;
+}
+
+::ng-deep.mat-form-field-wrapper {
+  margin: 0px !important;
+}
