--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -69,7 +69,7 @@
         height: 40px;
         display: flex;
 
-        .mat-raised-button {
+        .mat-mdc-raised-button {
           box-shadow: none;
         }
 
