--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.scss
@@ -183,7 +183,7 @@
 			.location-buttons {
 				display: flex;
 
-				button.mat-button {
+				button.mat-mdc-button {
 					flex: 0 0 2rem;
 					min-width: 2rem;
 					width: 2rem;
