--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
@@ -70,7 +70,7 @@ mat-tab-group {
     border-bottom: 1px solid #dddddd;
 }
 
-.mat-raised-button {
+.mat-mdc-raised-button {
     box-shadow: none;
 }
 
