--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.scss
@@ -21,7 +21,7 @@
   border: 1px solid #a7a9ac;
   border-radius: 5px;
   width: 100%;
-  .mat-raised-button {
+  .mat-mdc-raised-button {
     box-shadow: none;
     width: 100%;
     padding: 0;
