--- a/client/wfnews-war/src/main/angular/src/styles/component/_side-panel.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/component/_side-panel.scss
@@ -17,7 +17,7 @@
       top: .25rem;
       padding-bottom: 0.5rem;
 
-      .mat-button {
+      .mat-mdc-button {
         min-width: 2rem;
         padding: 0;
       }
