--- a/client/wfnews-war/src/main/angular/src/app/app.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.scss
@@ -118,7 +118,7 @@
     .location-buttons {
       display: flex;
 
-      button.mat-button {
+      button.mat-mdc-button {
         flex: 0 0 2rem;
         min-width: 2rem;
         width: 2rem;
@@ -218,7 +218,7 @@
   display: flex;
   align-items: flex-end;
 
-  .mat-title {
+  .mat-headline-6 {
       font-size: 1.4rem;
       color: white;
       white-space: nowrap;
