--- a/client/wfnews-war/src/main/angular/src/app/components/base/mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/base/mobile.component.scss
@@ -88,8 +88,8 @@ $list-item-width: 100%;
       .mat-icon {
         margin-right: 10px;
       }
-
-      &.mat-fab .mat-button-wrapper {
+      /*TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version.*/
+      &.mat-mdc-fab .mat-button-wrapper {
         padding: 0;
       }
 
@@ -330,7 +330,7 @@ $list-item-width: 100%;
           left: -30px;
           margin-left: 0;
           flex: none;
-
+          /*TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version.*/
           ::ng-deep .mat-button-wrapper{
             display: flex;
             border-radius: 20%;
