--- a/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/contact-widget-dialog/contact-widget-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/contact-widget-dialog/contact-widget-dialog.component.html
@@ -27,7 +27,7 @@
                         </div>
                         <div class="row">
                             <div class="field">
-                                <mat-label class="label">Subject</mat-label>
+                                <mat-label class="label">Subject<span style="color: red">*</span></mat-label>
                                 <input matInput type="text" formControlName="subject" aria-label="Subject" />
                             </div>
                         </div>
