--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/response-details-panel/response-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/response-details-panel/response-details-panel.component.html
@@ -1,5 +1,5 @@
 <ng-container [formGroup]="formGroup" class="incident-form">
-  <mat-card class="info-card news-form-card">
+  <mat-card appearance="outlined" class="info-card news-form-card">
     <fieldset class="field-set">
       <legend style="display: none">General Disclaimer Card</legend>
       <div class="news-form">
@@ -19,7 +19,7 @@
       </div>
     </fieldset>
   </mat-card>
-  <mat-card class="info-card news-form-card">
+  <mat-card appearance="outlined" class="info-card news-form-card">
     <mat-card-title>
       Wildfire Crews
     </mat-card-title>
@@ -54,7 +54,7 @@
       </div>
     </fieldset>
   </mat-card>
-  <mat-card class="info-card news-form-card">
+  <mat-card appearance="outlined" class="info-card news-form-card">
     <mat-card-title>
       Aviation
     </mat-card-title>
@@ -89,7 +89,7 @@
       </div>
     </fieldset>
   </mat-card>
-  <mat-card class="info-card news-form-card">
+  <mat-card appearance="outlined" class="info-card news-form-card">
     <mat-card-title>
       Incident Management Team
     </mat-card-title>
@@ -114,7 +114,7 @@
       </div>
     </fieldset>
   </mat-card>
-  <mat-card class="info-card news-form-card">
+  <mat-card appearance="outlined" class="info-card news-form-card">
     <mat-card-title>
       Heavy Equipment
     </mat-card-title>
@@ -145,7 +145,7 @@
       </div>
     </fieldset>
   </mat-card>
-  <mat-card class="info-card news-form-card">
+  <mat-card appearance="outlined" class="info-card news-form-card">
     <mat-card-title>
       Structure Protection
     </mat-card-title>
