--- a/client/wfnews-war/src/main/angular/src/styles/_base.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/_base.scss
@@ -54,7 +54,7 @@ mat-toolbar.wf1-application-header.mat-primary {
         justify-content: center;
         align-items: flex-end;
 
-        .mat-title {
+        .mat-headline-6 {
             font-size: 1.4rem;
             color: $colour-white;
             white-space: nowrap;
