--- a/client/wfnews-war/src/main/angular/src/app/app.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.scss
@@ -218,7 +218,7 @@
   display: flex;
   align-items: flex-end;
 
-  .mat-title {
+  .mat-headline-6 {
       font-size: 1.4rem;
       color: white;
       white-space: nowrap;
