--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/contacts-details-panel/contacts-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/contacts-details-panel/contacts-details-panel.component.html
@@ -1,5 +1,5 @@
 <ng-container [formGroup]="formGroup" class="incident-form">
-  <mat-card class="info-card news-form-card">
+  <mat-card appearance="outlined" class="info-card news-form-card">
     <fieldset class="field-set" formGroupName="contact">
       <legend style="display: none">Contact Details Card</legend>
       <div class="news-form">
