--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
@@ -1,5 +1,5 @@
 <ng-container [formGroup]="formGroup" class="incident-form">
-  <mat-card class="info-card news-form-card">
+  <mat-card appearance="outlined" class="info-card news-form-card">
     <fieldset class="field-set">
       <legend style="display: none">Info Card</legend>
       <div class="news-form">
@@ -32,7 +32,7 @@
       </div>
     </fieldset>
   </mat-card>
-  <mat-card class="info-card news-form-card">
+  <mat-card appearance="outlined" class="info-card news-form-card">
     <fieldset class="field-set">
       <legend style="display: none">Info Card</legend>
       <div class="news-form">
@@ -73,7 +73,7 @@
       </div>
     </fieldset>
   </mat-card>
-  <mat-card class="info-card news-form-card">
+  <mat-card appearance="outlined" class="info-card news-form-card">
     <fieldset class="field-set">
       <legend style="display: none">Info Card</legend>
       <div class="news-form">
