--- a/client/wfnews-war/src/main/angular/src/app/components/base/mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/base/mobile.component.scss
@@ -255,7 +255,7 @@ $list-item-width: 100%;
 
     textarea,
     input,
-    mat-checkbox.mat-checkbox,
+    mat-checkbox.mat-mdc-checkbox,
     select.mat-input-element {
       border: 1px solid $colour-light-grey;
       padding: 0 5px;
