--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
@@ -64,7 +64,7 @@ mat-tab-group {
 .wildfire-checkboxs{
     font-size: 15px;
     padding: 1rem;
-    .mat-checkbox {
+    .mat-mdc-checkbox {
         margin-right: 1rem;
     }
     border-bottom: 1px solid #dddddd;
