chips  component upgrade

--- a/client/wfnews-war/src/main/angular/ios/App/App/public/styles.css
+++ b/client/wfnews-war/src/main/angular/ios/App/App/public/styles.css
@@ -6,7 +6,7 @@
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[6].rules[0].oneOf[0].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[6].rules[0].oneOf[0].use[2]!./node_modules/resolve-url-loader/index.js??ruleSet[1].rules[6].rules[1].use[0]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[6].rules[1].use[1]!./src/styles/main.scss?ngGlobalStyle ***!
   \****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
 .mat-h1,
-.mat-headline,
+.mat-headline-5,
 .mat-typography .mat-h1,
 .mat-typography .mat-headline,
 .mat-typography h1 {
@@ -19,7 +19,7 @@
 }
 
 .mat-h2,
-.mat-title,
+.mat-headline-6,
 .mat-typography .mat-h2,
 .mat-typography .mat-title,
 .mat-typography h2 {
@@ -32,7 +32,7 @@
 }
 
 .mat-h3,
-.mat-subheading-2,
+.mat-subtitle-1,
 .mat-typography .mat-h3,
 .mat-typography .mat-subheading-2,
 .mat-typography h3 {
@@ -45,7 +45,7 @@
 }
 
 .mat-h4,
-.mat-subheading-1,
+.mat-body-1,
 .mat-typography .mat-h4,
 .mat-typography .mat-subheading-1,
 .mat-typography h4 {
@@ -72,7 +72,7 @@
 }
 
 .mat-body-strong,
-.mat-body-2,
+.mat-subtitle-2,
 .mat-typography .mat-body-strong,
 .mat-typography .mat-body-2 {
   font-size: 14px;
@@ -83,7 +83,7 @@
 }
 
 .mat-body,
-.mat-body-1,
+.mat-body-2,
 .mat-typography .mat-body,
 .mat-typography .mat-body-1,
 .mat-typography {
@@ -94,7 +94,7 @@
   letter-spacing: normal;
 }
 .mat-body p,
-.mat-body-1 p,
+.mat-body-2 p,
 .mat-typography .mat-body p,
 .mat-typography .mat-body-1 p,
 .mat-typography p {
@@ -112,7 +112,7 @@
   letter-spacing: normal;
 }
 
-.mat-display-4,
+.mat-headline-1,
 .mat-typography .mat-display-4 {
   font-size: 112px;
   font-weight: 300;
@@ -122,7 +122,7 @@
   margin: 0 0 56px;
 }
 
-.mat-display-3,
+.mat-headline-2,
 .mat-typography .mat-display-3 {
   font-size: 56px;
   font-weight: 400;
@@ -132,7 +132,7 @@
   margin: 0 0 64px;
 }
 
-.mat-display-2,
+.mat-headline-3,
 .mat-typography .mat-display-2 {
   font-size: 45px;
   font-weight: 400;
@@ -142,7 +142,7 @@
   margin: 0 0 64px;
 }
 
-.mat-display-1,
+.mat-headline-4,
 .mat-typography .mat-display-1 {
   font-size: 34px;
   font-weight: 400;
@@ -504,11 +504,11 @@ input.mat-input-element {
   letter-spacing: normal;
 }
 
-.mat-chip {
+.mat-mdc-chip {
   font-size: 14px;
   font-weight: 500;
 }
-.mat-chip .mat-chip-trailing-icon.mat-icon,
+.mat-mdc-chip .mat-chip-trailing-icon.mat-icon,
 .mat-chip .mat-chip-remove.mat-icon {
   font-size: 18px;
 }
@@ -1721,58 +1721,71 @@ textarea.cdk-textarea-autosize-measuring-firefox {
   color: rgba(0, 0, 0, 0.87);
 }
 
-.mat-chip.mat-standard-chip {
+.mat-mdc-chip.mat-mdc-standard-chip {
   background-color: #e0e0e0;
   color: rgba(0, 0, 0, 0.87);
 }
-.mat-chip.mat-standard-chip .mat-chip-remove {
+/*TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version.*/
+.mat-mdc-chip.mat-mdc-standard-chip .mat-chip-remove {
   color: rgba(0, 0, 0, 0.87);
   opacity: 0.4;
 }
-.mat-chip.mat-standard-chip:not(.mat-chip-disabled):active {
+/*TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version.*/
+.mat-mdc-chip.mat-mdc-standard-chip:not(.mat-chip-disabled):active {
   box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 8px 0px rgba(0, 0, 0, 0.12);
 }
-.mat-chip.mat-standard-chip:not(.mat-chip-disabled) .mat-chip-remove:hover {
+/*TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version.*/
+.mat-mdc-chip.mat-mdc-standard-chip:not(.mat-chip-disabled) .mat-chip-remove:hover {
   opacity: 0.54;
 }
-.mat-chip.mat-standard-chip.mat-chip-disabled {
+/*TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version.*/
+.mat-mdc-chip.mat-mdc-standard-chip.mat-chip-disabled {
   opacity: 0.4;
 }
-.mat-chip.mat-standard-chip::after {
+.mat-mdc-chip.mat-mdc-standard-chip::after {
   background: black;
 }
 
-.mat-chip.mat-standard-chip.mat-chip-selected.mat-primary {
+/*TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version.*/
+.mat-mdc-chip.mat-mdc-standard-chip.mat-chip-selected.mat-primary {
   background-color: #263238;
   color: white;
 }
-.mat-chip.mat-standard-chip.mat-chip-selected.mat-primary .mat-chip-remove {
+/*TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version.*/
+.mat-mdc-chip.mat-mdc-standard-chip.mat-chip-selected.mat-primary .mat-chip-remove {
   color: white;
   opacity: 0.4;
 }
-.mat-chip.mat-standard-chip.mat-chip-selected.mat-primary .mat-ripple-element {
+/*TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version.*/
+.mat-mdc-chip.mat-mdc-standard-chip.mat-chip-selected.mat-primary .mat-ripple-element {
   background-color: rgba(255, 255, 255, 0.1);
 }
-.mat-chip.mat-standard-chip.mat-chip-selected.mat-warn {
+/*TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version.*/
+.mat-mdc-chip.mat-mdc-standard-chip.mat-chip-selected.mat-warn {
   background-color: #c62828;
   color: white;
 }
-.mat-chip.mat-standard-chip.mat-chip-selected.mat-warn .mat-chip-remove {
+/*TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version.*/
+.mat-mdc-chip.mat-mdc-standard-chip.mat-chip-selected.mat-warn .mat-chip-remove {
   color: white;
   opacity: 0.4;
 }
-.mat-chip.mat-standard-chip.mat-chip-selected.mat-warn .mat-ripple-element {
+/*TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version.*/
+.mat-mdc-chip.mat-mdc-standard-chip.mat-chip-selected.mat-warn .mat-ripple-element {
   background-color: rgba(255, 255, 255, 0.1);
 }
-.mat-chip.mat-standard-chip.mat-chip-selected.mat-accent {
+/*TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version.*/
+.mat-mdc-chip.mat-mdc-standard-chip.mat-chip-selected.mat-accent {
   background-color: #bdbdbd;
   color: rgba(0, 0, 0, 0.87);
 }
-.mat-chip.mat-standard-chip.mat-chip-selected.mat-accent .mat-chip-remove {
+/*TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version.*/
+.mat-mdc-chip.mat-mdc-standard-chip.mat-chip-selected.mat-accent .mat-chip-remove {
   color: rgba(0, 0, 0, 0.87);
   opacity: 0.4;
 }
-.mat-chip.mat-standard-chip.mat-chip-selected.mat-accent .mat-ripple-element {
+/*TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version.*/
+.mat-mdc-chip.mat-mdc-standard-chip.mat-chip-selected.mat-accent .mat-ripple-element {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
@@ -3104,7 +3117,7 @@ mat-toolbar.wf1-application-header.mat-primary .app-logo-and-title-div {
   justify-content: center;
   align-items: flex-end;
 }
-mat-toolbar.wf1-application-header.mat-primary .app-logo-and-title-div .mat-title {
+mat-toolbar.wf1-application-header.mat-primary .app-logo-and-title-div .mat-headline-6 {
   font-size: 1.4rem;
   color: #ffffff;
   white-space: nowrap;
@@ -6138,5 +6151,3 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
   right: 0;
   left: 0;
 }
-
-/*# sourceMappingURL=styles.css.map*/
