--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/video-gallery-panel/upload-video-dialog/upload-video-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/video-gallery-panel/upload-video-dialog/upload-video-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="dialog-container">
-    <h1 mat-dialog-title>Add Video</h1>
+    <h1 mat-mdc-dialog-title>Add Video</h1>
     <div class="dialog-content" mat-dialog-content>
       <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
         <mat-label class="label">Video Title (150 character limit)</mat-label>
