--- a/client/wfnews-war/src/main/angular/src/app/components/common/unsaved-changes-dialog/unsaved-changes-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/common/unsaved-changes-dialog/unsaved-changes-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="dialog-container">
-  <h1 mat-dialog-title>Warning</h1>
+  <h1 mat-mdc-dialog-title>Warning</h1>
   <div class="dialog-content unsaved-changes-dialog-content" mat-dialog-content>
     <p class="subtitle">Are you sure you would like to leave this page?</p>
     If you leave this page without publishing, the information you have entered will be lost.
