--- a/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/contact-widget-dialog/contact-widget-dialog.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/contact-widget-dialog/contact-widget-dialog.component.scss
@@ -6,7 +6,8 @@
 
 .contact-widget-dialog-container {
     
-    .mat-dialog-title{
+    .mat-mdc-dialog-title{
+        font-weight: 0 !important;
         margin-bottom: 0;
         display: flex;
         justify-content: space-between;
