--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/maps-panel/upload-map-dialog/upload-map-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/maps-panel/upload-map-dialog/upload-map-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="dialog-container">
-  <h1 mat-dialog-title>Upload Map</h1>
+  <h1 mat-mdc-dialog-title>Upload Map</h1>
   <div class="dialog-content" mat-dialog-content>
     <input #pdfInput hidden="true" type="file" onclick="this.value=null" (change)="pdfInputChange($event)" accept=".pdf"/>
     <button mat-flat-button color="primary" (click)="pdfInput.click()">Browse</button>
